[package]
name = "social-media-api"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "load_test"
path = "src/load_test.rs"

[[bin]]
name = "stress_test"
path = "src/stress_test.rs"

[[bin]]
name = "concurrent_test"
path = "src/concurrent_test.rs"
